@@ -1,3 +1,7 @@
+2011-02-25  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Added feature #17761: htmlArea RTE: Defer access to stylesheets
+
 2011-02-25  Stefan Galinski  <stefan.galinski@gmail.com>
 
 	* Fixed bug #17431: "Show Page" in contextmenu results in new browser window (Thanks to Simon Schaufelberger)
